fix: console log errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["glasmorphism", "Glasmorphism", "tailwindcss"]
+  "cSpell.words": [
+    "glasmorphism",
+    "Glasmorphism",
+    "impressum",
+    "linkedin",
+    "tailwindcss",
+    "Trüssel"
+  ]
 }
