--- a/project/package.json
+++ b/project/package.json
@@ -14,7 +14,8 @@
     "plyr-react": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "react-responsive": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
