--- a/project/package.json
+++ b/project/package.json
@@ -15,7 +15,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-transition-group": "^4.4.5",
-    "react-responsive": "^10.0.1"
+    "react-responsive": "^10.0.1",
+    "@emnapi/core": "^1.4.3",
+    "@emnapi/runtime": "^1.4.3",
+    "@emnapi/wasi-threads": "^1.0.2",
+    "@napi-rs/wasm-runtime": "^0.2.10",
+    "@tybys/wasm-util": "^0.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
