--- a/project/package.json
+++ b/project/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emnapi/core": "^1.4.3",
+    "@emnapi/runtime": "^1.4.3",
+    "@emnapi/wasi-threads": "^1.0.2",
+    "@napi-rs/wasm-runtime": "^0.2.10",
+    "@tybys/wasm-util": "^0.9.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "plyr-react": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-transition-group": "^4.4.5",
     "react-responsive": "^10.0.1",
-    "@emnapi/core": "^1.4.3",
-    "@emnapi/runtime": "^1.4.3",
-    "@emnapi/wasi-threads": "^1.0.2",
-    "@napi-rs/wasm-runtime": "^0.2.10",
-    "@tybys/wasm-util": "^0.9.0"
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
