--- a/project/package.json
+++ b/project/package.json
@@ -21,7 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
